--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.2",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
@@ -20,8 +20,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "jquery": "^3.3.1",
+    "ng2-cookies": "^1.0.12",
+    "ngx-toastr": "^8.10.2",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
+    "socket.io": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
